@@ -1960,66 +1960,6 @@
     (should-equal (compat-call alist-get "one" alist-2 nil nil #'string=)
                    "eins")))
 
-(ert-deftest json-serialize ()
-  (let ((input-1 '((:key . ["abc" 2]) (yek . t)))
-        (input-2 '(:key ["abc" 2] yek t))
-        ;; TODO fix broken test
-        ;;(input-3 (let ((ht (make-hash-table)))
-        ;;           (puthash "key" ["abc" 2] ht)
-        ;;           (puthash "yek" t ht)
-        ;;           ht))
-        )
-    (should-equal (json-serialize input-1)
-                   "{\":key\":[\"abc\",2],\"yek\":true}")
-    (should-equal (json-serialize input-2)
-                   "{\"key\":[\"abc\",2],\"yek\":true}")
-    (should (member (json-serialize input-2)
-                    '("{\"key\":[\"abc\",2],\"yek\":true}"
-                      "{\"yek\":true,\"key\":[\"abc\",2]}")))
-    ;; TODO fix broken test
-    ;; (should-equal (json-serialize input-3)
-    ;;                "{\"key\":[\"abc\",2],\"yek\":true}"))
-    (should-error (json-serialize '(("a" . 1)))
-                  :type '(wrong-type-argument symbolp "a"))
-    (should-error (json-serialize '("a" 1))
-                  :type '(wrong-type-argument symbolp "a"))
-    (should-error (json-serialize '("a" 1 2))
-                  :type '(wrong-type-argument symbolp "a"))
-    (should-error (json-serialize '(:a 1 2))
-                  :type '(wrong-type-argument consp nil))
-    (should-error (json-serialize
-                   (let ((ht (make-hash-table)))
-                     (puthash 'a 1 ht)
-                     ht))
-                  :type '(wrong-type-argument stringp a))))
-
-(ert-deftest json-parse-string ()
-  ;; TODO fix broken tests!
-  ;; (should-equal 0 (json-parse-string "0"))
-  ;; (should-equal 1 (json-parse-string "1"))
-  ;; (should-equal 0.5 (json-parse-string "0.5"))
-  ;; (should-equal 'foo (json-parse-string "null" :null-object 'foo))
-  (should-equal [1 2 3] (json-parse-string "[1,2,3]"))
-  (should-equal ["a" 2 3] (json-parse-string "[\"a\",2,3]"))
-  (should-equal [["a" 2] 3] (json-parse-string "[[\"a\",2],3]"))
-  (should-equal '(("a" 2) 3) (json-parse-string "[[\"a\",2],3]" :array-type 'list))
-  (should-equal ["false" t] (json-parse-string "[false, true]" :false-object "false"))
-  (let ((input "{\"key\":[\"abc\", 2], \"yek\": null}"))
-    (let ((obj (json-parse-string input :object-type 'alist)))
-      (should-equal (cdr (assq 'key obj)) ["abc" 2])
-      (should-equal (cdr (assq 'yek obj)) :null))
-    (let ((obj (json-parse-string input :object-type 'plist)))
-      (should-equal (plist-get obj :key) ["abc" 2])
-      (should-equal (plist-get obj :yek) :null))
-    (let ((obj (json-parse-string input)))
-      (should-equal (gethash "key" obj) ["abc" 2])
-      (should-equal (gethash "yek" obj) :null))))
-
-(ert-deftest json-insert ()
-  (with-temp-buffer
-    (json-insert '((:key . ["abc" 2]) (yek . t)))
-    (should-equal (buffer-string) "{\":key\":[\"abc\",2],\"yek\":true}")))
-
 (ert-deftest make-prop-match ()
   (should (prop-match-p (make-prop-match)))
   (should (prop-match-p (make-prop-match :end 1)))
