@@ -935,79 +935,6 @@ accurate results with raw bytes.
 @xref{Text Comparison,,,elisp}.
 @end defun
 
-@c copied from lispref/text.texi
-@defun json-serialize object &rest args
-This function returns a new Lisp string which contains the JSON
-representation of @var{object}.  The argument @var{args} is a list of
-keyword/argument pairs.  The following keywords are accepted:
-
-@table @code
-@item :null-object
-The value decides which Lisp object to use to represent the JSON keyword
-@code{null}.  It defaults to the symbol @code{:null}.
-
-@item :false-object
-The value decides which Lisp object to use to represent the JSON keyword
-@code{false}.  It defaults to the symbol @code{:false}.
-@end table
-
-@xref{Parsing JSON,,,elisp}.
-@end defun
-
-@c copied from lispref/text.texi
-@defun json-insert object &rest args
-This function inserts the JSON representation of @var{object} into the
-current buffer before point.  The argument @var{args} are interpreted as
-in @code{json-parse-string}.
-
-@xref{Parsing JSON,,,elisp}.
-@end defun
-
-@c copied from lispref/text.texi
-@defun json-parse-string string &rest args
-This function parses the JSON value in @var{string}, which must be a
-Lisp string.  If @var{string} doesn't contain a valid JSON object, this
-function signals the @code{json-parse-error} error.
-
-The argument @var{args} is a list of keyword/argument pairs.  The
-following keywords are accepted:
-
-@table @code
-@item :object-type
-The value decides which Lisp object to use for representing the
-key-value mappings of a JSON object.  It can be either
-@code{hash-table}, the default, to make hashtables with strings as keys;
-@code{alist} to use alists with symbols as keys; or @code{plist} to use
-plists with keyword symbols as keys.
-
-@item :array-type
-The value decides which Lisp object to use for representing a JSON
-array.  It can be either @code{array}, the default, to use Lisp arrays;
-or @code{list} to use lists.
-
-@item :null-object
-The value decides which Lisp object to use to represent the JSON keyword
-@code{null}.  It defaults to the symbol @code{:null}.
-
-@item :false-object
-The value decides which Lisp object to use to represent the JSON keyword
-@code{false}.  It defaults to the symbol @code{:false}.
-@end table
-
-@xref{Parsing JSON,,,elisp}.
-@end defun
-
-@c copied from lispref/text.texi
-@defun json-parse-buffer &rest args
-This function reads the next JSON value from the current buffer,
-starting at point.  It moves point to the position immediately after the
-value if contains a valid JSON object; otherwise it signals the
-@code{json-parse-error} error and doesn't move point.  The arguments
-@var{args} are interpreted as in @code{json-parse-string}.
-
-@xref{Parsing JSON,,,elisp}.
-@end defun
-
 @c copied from lispref/control.texi
 @defmac ignore-errors body@dots{}
 This construct executes @var{body}, ignoring any errors that occur
@@ -1972,34 +1899,6 @@ display properties and fonts, etc.
 
 This compatibility version handles the optional arguments @var{from} and
 @var{to}.
-@end defun
-
-@defun compat-call@ json-serialize
-@xref{Emacs 27.1}.
-
-This compatibility version handles primitive, top-level JSON values
-(numbers, strings, booleans).
-@end defun
-
-@defun compat-call@ json-insert
-@xref{Emacs 27.1}.
-
-This compatibility version handles primitive, top-level JSON values
-(numbers, strings, booleans).
-@end defun
-
-@defun compat-call@ json-parse-string
-@xref{Emacs 27.1}.
-
-This compatibility version handles primitive, top-level JSON values
-(numbers, strings, booleans).
-@end defun
-
-@defun compat-call@ json-parse-buffer
-@xref{Emacs 27.1}.
-
-This compatibility version handles primitive, top-level JSON values
-(numbers, strings, booleans).
 @end defun
 
 @c copied from on lisp/window.el
