@@ -4,6 +4,7 @@
 
 - Add tests.
 - Add links from compatibility definitions to tests.
+- Drop JSON parsing support (libjansson API).
 - compat-26: Add ~buffer-hash~.
 - compat-27: Add ~fixnump~ and ~bignump~.
 - compat-27: Add ~with-minibuffer-selected-window~.
